--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ author:
 social:
 #- {name: "Twitter", icon: "ion-logo-twitter", link: "https://twitter.com/letmestayon"}
 #- {name: "Instagram", icon: "ion-logo-instagram", link: "https://instagram.com/suitable.han"}
-#- {name: "Email", icon: "ion-ios-mail", link: "mailto:yukin@yukin.pl"}
+- {name: "Email", icon: "ion-ios-mail", link: "mailto:yukin@yukin.pl"}
 
 # Slider Section
 # slider: Life # NOTE - By default, the slider is set to display tags. Now the slider shows the tag with the text "Life". If you do not want to use the slider, leave the slider field empty.
