--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -29,8 +29,8 @@ concurrency:
 jobs:
   # Build job
   build:
-    #runs-on: ubuntu-latest
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
+    #runs-on: ubuntu-22.04
     steps:
       - name: Checkout
         uses: actions/checkout@v4
